--- a/algebra/alCh1CardSet1.html
+++ b/algebra/alCh1CardSet1.html
@@ -17,7 +17,10 @@
   src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/startup.js">
 </script>
 <script type="text/javascript"> src="https://pingnan.github.io/newFlashCard.js"> </script>
-
+<style>
+body {
+    background-colore: powderblue;
+}
 </head>
 <!-- Body -->
 <body>
